src/common.css
:root {
	font-family: Nunito, sans-serif;
	color: #666666;
}

body {
	font-family: Nunito, sans-serif;
	color: #666666;
	background-size: cover;
	background-image: linear-gradient(to bottom, rgba(180, 200, 255, 0.8), rgba(255, 255, 255, 0.9)),
		url('../static/ben-kitching-QXcVpzt6pq0-unsplash.jpg');
}

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	.text-h1 {
		font-size: 4em;
		font-weight: bold;
	}

	.text-h2 {
		font-size: 3.5em;
		font-weight: bold;
	}

	.text-h3 {
		font-size: 2em;
		font-weight: bold;
	}

	.text-h4 {
		font-size: 1.5em;
		font-weight: bold;
	}

	.h-fit {
		height: fit-content;
	}

	.center {
		position: absolute;
		top: 50%;
		left: 50%;
		transform: translate(-50%, -50%);
	}

	.blue-link {
		@apply transition-all;
		@apply duration-200;
		@apply hover:text-blue-primary;
    @apply text-base;
    @apply hover:text-[18px]; 
    @apply active:text-[17px];
    @apply w-max;
    @apply m-auto;
	}

	.shadow-all {
		@apply shadow;
		@apply hover:shadow-lg;
		@apply active:shadow-md;
	}

	.text-gray-default {
		color: #666666;
	}

	.bg-img-sm {
		background-position: 35%;
	}
}

@layer components {
  .nav-div {
    text-align: center;
    position: relative;
    width: 60px;
    transition-duration: 200ms;
    transition-property: all;
    @apply text-white;
    @apply hover:text-xl; 
    @apply active:text-lg;
    @apply text-base;
  }

  .nav-link {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

